--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="import_local_lrc">Import Local LRC File</string>
 
     <!-- Wearable -->
+    <string name="watch_scale">Scale: %1$s</string>
+    <string name="watch_scale_desc">Adjust overall UI size</string>
+    <string name="select_watch_scale">Select Scale</string>
+    <string name="apply_and_restart">Apply and Restart</string>
     <string name="now_playing">Now Playing</string>
     <string name="library">Library</string>
     <string name="locally_imported">Locally Imported</string>
